# Janet.Twin.2

./: .gitignore  GEMINI.md  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
data/: README.md
data/struct/: config.json  file.json  user_config.json
docs/: README.md  user_interface.md
plugins/: base_plugins.py  conversation_plugin.py  echo_plugin.py  google_search_plugin.py  logs_search_plugin.py
scripts/: dev.sh
src/janet_twin/: __main__.py  app.py  chat.py  file_manager_tool.py  logger.py  main_window.py  raw_data_tool.py  settings.py  toolbox.py
src/janet_twin/models/: conversation.py  task.py
src/janet_twin/orchestrator/: orchestrator.py  registry.py  task.py
src/janet_twin/ui/: chat.py  main_window.py  toolbox.py
src/janet_twin/ui/tools/: conversation_history_tool.py  file_manager_tool.py  log_viewer_tool.py  settings.py  settings_console.py
src/janet_twin/utils/: conversation_utility.py  logger_utility.py  plugin_loader.py  settings_utility.py
tests/: README.md  __init__.py  conftest.py  pytest.ini  test_main.py
